--- a/CRMPhone/MainWindow.xaml
+++ b/CRMPhone/MainWindow.xaml
@@ -30,10 +30,15 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <StackPanel Grid.Row ="0">
-                <DockPanel Margin="0,10">
+                <DockPanel Margin="0,3">
                     <TextBlock Text="Входящий вызов от:" Margin="3" FontWeight="Bold"/>
                     <TextBlock Text="{Binding IncomingCallFrom}" Margin="3" FontWeight="Bold"/>
                 </DockPanel>
+                <DockPanel>
+                    <TextBlock Text="УК:" Margin="3" FontWeight="Bold"/>
+                    <TextBlock Text="{Binding CallFromServiceCompany}" Margin="3" FontWeight="Bold"/>
+                </DockPanel>
+
                 <DockPanel HorizontalAlignment ="Center">
                     <TextBlock Text="Номер:" VerticalAlignment="Center"/>
                     <TextBox Margin="5" Width="100" Text="{Binding SipPhone}"/>
@@ -54,6 +59,11 @@
                         <Image Source="pack://application:,,,/Images/mic-mute.png" Width="24" Height="24" />
                     </Button>
                 </StackPanel>
+                <StackPanel>
+                    <TextBlock Text="Последний разговор с:" Margin="3" FontWeight="Bold" HorizontalAlignment="Center"/>
+                    <TextBlock Text="{Binding LastAnsweredPhoneNumber}" Margin="3" FontWeight="Bold" HorizontalAlignment="Center"/>
+                </StackPanel>
+
                 <TextBlock Margin ="5" FontWeight="Bold" TextAlignment="Center" Text="Абоненты в очереди:"/>
             </StackPanel>
             <ListBox Grid.Row ="1" ItemsSource="{Binding Path=ActiveChannels}" Margin="10">
